// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowButton Component renders correctly and matches the snapshot when disabled 1`] = `
<DocumentFragment>
  <button
    aria-label="Send message"
    class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
    disabled=""
    type="submit"
  >
    <svg
      class="w-5 h-5 rotate-90 fill-current"
      viewBox="0 0 18 18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
      >
        <title>
          Arrow Submit Button
        </title>
      </path>
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ArrowButton Component renders correctly and matches the snapshot when enabled 1`] = `
<DocumentFragment>
  <button
    aria-label="Send message"
    class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
    type="submit"
  >
    <svg
      class="w-5 h-5 rotate-90 fill-current"
      viewBox="0 0 18 18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
      >
        <title>
          Arrow Submit Button
        </title>
      </path>
    </svg>
  </button>
</DocumentFragment>
`;
